fix: Create common var and use it for z-index

--- a/src/javascript/ContentEditor/CloseConfirmationDialog/CloseConfirmationDialog.scss
+++ b/src/javascript/ContentEditor/CloseConfirmationDialog/CloseConfirmationDialog.scss
@@ -6,5 +6,5 @@ div.dialogContent {
 }
 
 .dialogRoot.dialogRoot {
-    z-index: 2000;
+    z-index: var(--ce-dialog-z-index);
 }
